	{} or //).  Put exclamation mark to invert pattern match.  Thanks to Marcos
	Cruz.

	Added :select and :unselect commands.  Thanks to filterfalse, Russell
	Urquhart and Marcos Cruz.

	Added chooseopt() builtin function that retrieves various parameters of
	file choosing.  Thanks to Von Welch.

	Added mime type patterns (!<list-of-globs>).  Thanks to Ross Hadden (a.k.a.
	rosshadden).

	Changed order of initialization to perform autocommands before startup
	commands on launch.

	Changed type of 'confirm' option.  Now it's a set that picks which
	operations should be confirmed.  Thanks to Losiara and mvucBmM0.

	Changed ga/gA effect on ".." entry to calculate size of current directory.
	Thanks to aleksejrs.

	Do not reset completion on terminal resize.

	Expand environment variables for :edit.  Thanks to filterfalse.

	Don't print just table header on `:cabbr something`, print message that no
	matches found instead.

	Display <c-h> as <bs> only at the beginning of key sequence.

	Better terminal buffer title for plugin in neovim.  Thanks to
	randomizedthinking.

	Enabled wildmenu for menus.

	Skip UTF-8 BOM for file preview.

	Allow suffixes and prefixes in 'classify' to be of up to eight characters
	in length.  Thanks to elricbk.

	Use original (before custom view) cursor position on :sync! in custom
	views.  Thanks to filterfalse.

	Never add parent entry (..) to very custom view (%U).  Thanks to
	filterfalse.

	Removed caret escaping on Windows...  Thanks to Reva Revadigar.

	Silently ignore tries to remove parent entry (..).  Thanks to aleksejrs.

	A bit better delete confirmation messages with number of files to be
	deleted.

	Fixed kind of a duplicate of first history element on =.

	Fixed displaying size for symbolic links to directories on changing views
	and determining whether they point to a directory in custom views.

	Fixed backward search in menus, which was performed in the opposite
	direction.
