@@ -93,6 +93,7 @@ Pavneet Arora
 Peter Barnes
 phijor
 Pierre Dorbais (chdorb)
+qinghao (haobug)
 Rainer Suhm
 randomizedthinking
 rbong
