@@ -1,4 +1,4 @@
-.TH VIFM 1 "May 01, 2016" "vifm 0.8.1a"
+.TH VIFM 1 "May 10, 2016" "vifm 0.8.1a"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -3812,6 +3812,8 @@ files are selected, except that it will never show size of ../ in visual mode,
 since it cannot be selected
 .IP \- 2
 %d \- file modification date (uses 'timefmt' option)
+.IP \- 2
+%z - short tips/tricks/hints that chosen randomly after one minute period
 .IP \- 2
 all 'rulerformat' macros
 .RE
