@@ -117,6 +117,11 @@ TEST(L_macro_expanded)
 	ASSERT_EXPANDED("%L");
 }
 
+TEST(z_macro_expanded)
+{
+	ASSERT_EXPANDED("%z");
+}
+
 TEST(dash_macro_expanded)
 {
 	ASSERT_EXPANDED("%-t");
@@ -144,7 +149,7 @@ TEST(percent_macro_expanded)
 
 TEST(wrong_macros_ignored)
 {
-	static const char STATUS_CHARS[] = "tAugsEd-lLS%[]";
+	static const char STATUS_CHARS[] = "tAugsEd-lLS%[]z";
 	int i;
 
 	for(i = 1; i <= 255; ++i)
@@ -159,7 +164,7 @@ TEST(wrong_macros_ignored)
 
 TEST(wrong_macros_with_width_field_ignored)
 {
-	static const char STATUS_CHARS[] = "tAugsEd-lLS%[]";
+	static const char STATUS_CHARS[] = "tAugsEd-lLS%[]z";
 	int i;
 
 	for(i = 1; i <= 255; ++i)
